# apricorn-usb-toolkit

./: .pre-commit-config.yaml  pyproject.toml
installers/windows/: README.md  license.rtf  usb-tool.wxs
src/usb_tool/: cli.py  device_version.py  services.py  utils.py
src/usb_tool/backend/: linux.py  macos.py  windows.py
tests/: test_cross_usb.py  test_installer_upgrade_identity.py  test_linux_usb.py  test_mac_usb.py  test_utils.py  test_version_visibility.py  test_windows_usb.py
utils/: windows_native_compile_hook.py
utils/windows_native_scan/: topology.c
