# --- pyproject.toml ---

# Configuration for building and packaging ``apricorn-usb-toolkit``.
#
# All packaging metadata lives in this single file so the project no longer
# relies on ``setup.py`` or ``requirements.txt``.

[build-system]
# Setuptools is used to build the package
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# Package metadata
name = "apricorn-usb-toolkit"
version = "1.5.25"
description = "Apricorn USB Toolkit: cross-platform CLI and Python library for Apricorn devices"
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies.  Windows specific packages use environment markers so
# they are only installed on that platform.
dependencies = [
    "pyusb",
    "libusb; sys_platform == 'win32'",
    "pywin32==311; sys_platform == 'win32'",
    "pygments==2.19.1; sys_platform == 'win32'",
]

[tool.uv.sources]
pywin32 = { path = "wheels/pywin32-311-cp314-cp314-win_amd64.whl", marker = "sys_platform == 'win32' and python_version >= '3.14'" }

# author = [
#    { name="Ryan Oswalt", email="roswalt@apricorn.com" },
# ]
# license = { text="MIT" }
# urls = { Homepage = "https://github.com/oswaltryan/apricorn-usb-toolkit" }

# --- This section defines the command-line script ---
[project.scripts]
usb = "usb_tool.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "ruff-format",
    "pytest",
    "mypy",
]

# Explicitly specify which packages are included to avoid picking up the
# ``wheels`` directory used for vendored dependencies.
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["usb_tool*"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py310"
extend-exclude = [
    "utils/windows_native_scan.c",
    "utils/windows_native_scan/**",
]

[tool.ruff.lint]
select = [
  "E", "F",  # pycodestyle + pyflakes
  "B",       # bugbear
  "I",       # import sorting
  "UP",      # pyupgrade
]

[tool.ruff.lint.pylint]
max-statements = 30
max-branches = 10
max-locals = 12
max-nested-blocks = 4
max-args = 6
max-positional-args = 4
max-bool-expr = 4

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = [
    "^wheels/",
    "^utils/windows_native_scan(?:\\.c|/)",
]

# --- End of pyproject.toml ---
